# togbe

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
example/wikip/: Cargo.toml  README.md
example/wikip/src/: main.rs
src/: lib.rs  main.rs
src/data/: mod.rs  queries.rs
src/entities/: link.rs  mod.rs  page_content.rs
src/services/: crawler.rs  fetcher.rs  mod.rs  parser.rs
src/utils/: mod.rs  url_resolver.rs
