[package]
name = "togbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = "0.6.0"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
futures = "0.3"
async-recursion = "0.3.0"
dotenv = "0.15"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"

